crates/liter-llm-ffi/include/liter_llm.h


typedef struct LITERLLMBatchListQuery LITERLLMBatchListQuery;
typedef struct LITERLLMBatchListResponse LITERLLMBatchListResponse;
typedef struct LITERLLMBatchObject LITERLLMBatchObject;
typedef struct LITERLLMBudgetConfig LITERLLMBudgetConfig;
typedef struct LITERLLMCacheConfig LITERLLMCacheConfig;
typedef struct LITERLLMChatCompletionChunk LITERLLMChatCompletionChunk;
typedef struct LITERLLMChatCompletionRequest LITERLLMChatCompletionRequest;
typedef struct LITERLLMChatCompletionResponse LITERLLMChatCompletionResponse;
typedef struct LITERLLMCreateBatchRequest LITERLLMCreateBatchRequest;
typedef struct LITERLLMCreateFileRequest LITERLLMCreateFileRequest;
typedef struct LITERLLMCreateImageRequest LITERLLMCreateImageRequest;
typedef struct LITERLLMCreateResponseRequest LITERLLMCreateResponseRequest;
typedef struct LITERLLMCreateSpeechRequest LITERLLMCreateSpeechRequest;
typedef struct LITERLLMCreateTranscriptionRequest LITERLLMCreateTranscriptionRequest;
typedef struct LITERLLMCustomProviderConfig LITERLLMCustomProviderConfig;
typedef struct LITERLLMDefaultClient LITERLLMDefaultClient;
typedef struct LITERLLMDeleteResponse LITERLLMDeleteResponse;
typedef struct LITERLLMEmbeddingRequest LITERLLMEmbeddingRequest;
typedef struct LITERLLMEmbeddingResponse LITERLLMEmbeddingResponse;
typedef struct LITERLLMFileListQuery LITERLLMFileListQuery;
typedef struct LITERLLMFileListResponse LITERLLMFileListResponse;
typedef struct LITERLLMFileObject LITERLLMFileObject;
typedef struct LITERLLMImagesResponse LITERLLMImagesResponse;
typedef struct LITERLLMModerationRequest LITERLLMModerationRequest;
typedef struct LITERLLMOcrRequest LITERLLMOcrRequest;
typedef struct LITERLLMRerankRequest LITERLLMRerankRequest;
typedef struct LITERLLMSearchRequest LITERLLMSearchRequest;
typedef struct LITERLLMSingleflightResult LITERLLMSingleflightResult;
typedef struct LITERLLMWaitForBatchConfig LITERLLMWaitForBatchConfig;
LITERLLMChatCompletionRequest *literllm_chat_completion_request_from_json(const char *json);
void literllm_chat_completion_request_free(LITERLLMChatCompletionRequest *ptr);
char *literllm_chat_completion_response_to_json(const LITERLLMChatCompletionResponse *ptr);
void literllm_chat_completion_response_free(LITERLLMChatCompletionResponse *ptr);
char *literllm_chat_completion_chunk_to_json(const LITERLLMChatCompletionChunk *ptr);
void literllm_chat_completion_chunk_free(LITERLLMChatCompletionChunk *ptr);
LITERLLMEmbeddingRequest *literllm_embedding_request_from_json(const char *json);
void literllm_embedding_request_free(LITERLLMEmbeddingRequest *ptr);
char *literllm_embedding_response_to_json(const LITERLLMEmbeddingResponse *ptr);
void literllm_embedding_response_free(LITERLLMEmbeddingResponse *ptr);
LITERLLMCreateImageRequest *literllm_create_image_request_from_json(const char *json);
void literllm_create_image_request_free(LITERLLMCreateImageRequest *ptr);
char *literllm_images_response_to_json(const LITERLLMImagesResponse *ptr);
void literllm_images_response_free(LITERLLMImagesResponse *ptr);
LITERLLMCreateSpeechRequest *literllm_create_speech_request_from_json(const char *json);
void literllm_create_speech_request_free(LITERLLMCreateSpeechRequest *ptr);
LITERLLMCreateTranscriptionRequest *literllm_create_transcription_request_from_json(const char *json);
void literllm_create_transcription_request_free(LITERLLMCreateTranscriptionRequest *ptr);
LITERLLMModerationRequest *literllm_moderation_request_from_json(const char *json);
void literllm_moderation_request_free(LITERLLMModerationRequest *ptr);
LITERLLMRerankRequest *literllm_rerank_request_from_json(const char *json);
void literllm_rerank_request_free(LITERLLMRerankRequest *ptr);
LITERLLMSearchRequest *literllm_search_request_from_json(const char *json);
void literllm_search_request_free(LITERLLMSearchRequest *ptr);
LITERLLMOcrRequest *literllm_ocr_request_from_json(const char *json);
void literllm_ocr_request_free(LITERLLMOcrRequest *ptr);
LITERLLMCreateFileRequest *literllm_create_file_request_from_json(const char *json);
void literllm_create_file_request_free(LITERLLMCreateFileRequest *ptr);
char *literllm_file_object_to_json(const LITERLLMFileObject *ptr);
void literllm_file_object_free(LITERLLMFileObject *ptr);
char *literllm_file_list_response_to_json(const LITERLLMFileListResponse *ptr);
void literllm_file_list_response_free(LITERLLMFileListResponse *ptr);
LITERLLMFileListQuery *literllm_file_list_query_from_json(const char *json);
void literllm_file_list_query_free(LITERLLMFileListQuery *ptr);
char *literllm_delete_response_to_json(const LITERLLMDeleteResponse *ptr);
void literllm_delete_response_free(LITERLLMDeleteResponse *ptr);
LITERLLMCreateBatchRequest *literllm_create_batch_request_from_json(const char *json);
void literllm_create_batch_request_free(LITERLLMCreateBatchRequest *ptr);
char *literllm_batch_object_to_json(const LITERLLMBatchObject *ptr);
void literllm_batch_object_free(LITERLLMBatchObject *ptr);
char *literllm_batch_list_response_to_json(const LITERLLMBatchListResponse *ptr);
void literllm_batch_list_response_free(LITERLLMBatchListResponse *ptr);
LITERLLMBatchListQuery *literllm_batch_list_query_from_json(const char *json);
void literllm_batch_list_query_free(LITERLLMBatchListQuery *ptr);
LITERLLMCreateResponseRequest *literllm_create_response_request_from_json(const char *json);
void literllm_create_response_request_free(LITERLLMCreateResponseRequest *ptr);
LITERLLMWaitForBatchConfig *literllm_wait_for_batch_config_from_json(const char *json);
void literllm_wait_for_batch_config_free(LITERLLMWaitForBatchConfig *ptr);
void literllm_default_client_free(LITERLLMDefaultClient *ptr);
LITERLLMCustomProviderConfig *literllm_custom_provider_config_from_json(const char *json);
void literllm_custom_provider_config_free(LITERLLMCustomProviderConfig *ptr);
char *literllm_budget_config_to_json(const LITERLLMBudgetConfig *ptr);
void literllm_budget_config_free(LITERLLMBudgetConfig *ptr);
char *literllm_cache_config_to_json(const LITERLLMCacheConfig *ptr);
void literllm_cache_config_free(LITERLLMCacheConfig *ptr);
void literllm_singleflight_result_free(LITERLLMSingleflightResult *ptr);