packages/csharp/LiterLlm/NativeMethods.cs

// This file is auto-generated by alef. DO NOT EDIT.
#nullable enable

using System;
using System.Runtime.InteropServices;

namespace LiterLlm;

internal static partial class NativeMethods
{
    private const string LibName = "liter_llm_ffi";

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_chunk_middleware_free")]
    internal static extern void ChunkMiddlewareFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_default_client_free")]
    internal static extern void DefaultClientFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_health_checker_free")]
    internal static extern void HealthCheckerFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_singleflight_result_free")]
    internal static extern void SingleflightResultFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_batch_list_query_from_json")]
    internal static extern IntPtr BatchListQueryFromJson([MarshalAs(UnmanagedType.LPUTF8Str)] string json);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_batch_list_query_free")]
    internal static extern void BatchListQueryFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_chat_completion_request_from_json")]
    internal static extern IntPtr ChatCompletionRequestFromJson([MarshalAs(UnmanagedType.LPUTF8Str)] string json);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_chat_completion_request_free")]
    internal static extern void ChatCompletionRequestFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_create_batch_request_from_json")]
    internal static extern IntPtr CreateBatchRequestFromJson([MarshalAs(UnmanagedType.LPUTF8Str)] string json);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_create_batch_request_free")]
    internal static extern void CreateBatchRequestFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_create_file_request_from_json")]
    internal static extern IntPtr CreateFileRequestFromJson([MarshalAs(UnmanagedType.LPUTF8Str)] string json);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_create_file_request_free")]
    internal static extern void CreateFileRequestFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_create_image_request_from_json")]
    internal static extern IntPtr CreateImageRequestFromJson([MarshalAs(UnmanagedType.LPUTF8Str)] string json);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_create_image_request_free")]
    internal static extern void CreateImageRequestFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_create_response_request_from_json")]
    internal static extern IntPtr CreateResponseRequestFromJson([MarshalAs(UnmanagedType.LPUTF8Str)] string json);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_create_response_request_free")]
    internal static extern void CreateResponseRequestFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_create_speech_request_from_json")]
    internal static extern IntPtr CreateSpeechRequestFromJson([MarshalAs(UnmanagedType.LPUTF8Str)] string json);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_create_speech_request_free")]
    internal static extern void CreateSpeechRequestFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_create_transcription_request_from_json")]
    internal static extern IntPtr CreateTranscriptionRequestFromJson([MarshalAs(UnmanagedType.LPUTF8Str)] string json);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_create_transcription_request_free")]
    internal static extern void CreateTranscriptionRequestFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_custom_provider_config_from_json")]
    internal static extern IntPtr CustomProviderConfigFromJson([MarshalAs(UnmanagedType.LPUTF8Str)] string json);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_custom_provider_config_free")]
    internal static extern void CustomProviderConfigFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_embedding_request_from_json")]
    internal static extern IntPtr EmbeddingRequestFromJson([MarshalAs(UnmanagedType.LPUTF8Str)] string json);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_embedding_request_free")]
    internal static extern void EmbeddingRequestFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_file_list_query_from_json")]
    internal static extern IntPtr FileListQueryFromJson([MarshalAs(UnmanagedType.LPUTF8Str)] string json);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_file_list_query_free")]
    internal static extern void FileListQueryFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_moderation_request_from_json")]
    internal static extern IntPtr ModerationRequestFromJson([MarshalAs(UnmanagedType.LPUTF8Str)] string json);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_moderation_request_free")]
    internal static extern void ModerationRequestFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_ocr_request_from_json")]
    internal static extern IntPtr OcrRequestFromJson([MarshalAs(UnmanagedType.LPUTF8Str)] string json);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_ocr_request_free")]
    internal static extern void OcrRequestFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_rerank_request_from_json")]
    internal static extern IntPtr RerankRequestFromJson([MarshalAs(UnmanagedType.LPUTF8Str)] string json);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_rerank_request_free")]
    internal static extern void RerankRequestFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_search_request_from_json")]
    internal static extern IntPtr SearchRequestFromJson([MarshalAs(UnmanagedType.LPUTF8Str)] string json);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_search_request_free")]
    internal static extern void SearchRequestFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_wait_for_batch_config_from_json")]
    internal static extern IntPtr WaitForBatchConfigFromJson([MarshalAs(UnmanagedType.LPUTF8Str)] string json);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_wait_for_batch_config_free")]
    internal static extern void WaitForBatchConfigFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_batch_list_response_to_json")]
    internal static extern IntPtr BatchListResponseToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_batch_list_response_free")]
    internal static extern void BatchListResponseFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_batch_object_to_json")]
    internal static extern IntPtr BatchObjectToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_batch_object_free")]
    internal static extern void BatchObjectFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_budget_config_to_json")]
    internal static extern IntPtr BudgetConfigToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_budget_config_free")]
    internal static extern void BudgetConfigFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_cache_config_to_json")]
    internal static extern IntPtr CacheConfigToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_cache_config_free")]
    internal static extern void CacheConfigFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_chat_completion_chunk_to_json")]
    internal static extern IntPtr ChatCompletionChunkToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_chat_completion_chunk_free")]
    internal static extern void ChatCompletionChunkFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_chat_completion_response_to_json")]
    internal static extern IntPtr ChatCompletionResponseToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_chat_completion_response_free")]
    internal static extern void ChatCompletionResponseFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_delete_response_to_json")]
    internal static extern IntPtr DeleteResponseToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_delete_response_free")]
    internal static extern void DeleteResponseFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_embedding_response_to_json")]
    internal static extern IntPtr EmbeddingResponseToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_embedding_response_free")]
    internal static extern void EmbeddingResponseFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_file_list_response_to_json")]
    internal static extern IntPtr FileListResponseToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_file_list_response_free")]
    internal static extern void FileListResponseFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_file_object_to_json")]
    internal static extern IntPtr FileObjectToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_file_object_free")]
    internal static extern void FileObjectFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_images_response_to_json")]
    internal static extern IntPtr ImagesResponseToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_images_response_free")]
    internal static extern void ImagesResponseFree(IntPtr ptr);
